feat: Initial project setup
Adds the basic structure for the Android application.

Includes:
- Initial Gradle configuration (`build.gradle.kts`, `gradle.properties`, wrapper files).
- Android Manifest with a main activity.
- A simple "Hello World!" main activity layout and corresponding Kotlin class.
- Basic resources like colors and launcher icons.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CropAdvisorAI">
         <activity
+            android:name=".ResultActivity"
+            android:exported="true" />
+        <activity
+            android:name=".SplashActivity"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
